Added routes and fixed oauth
