# middleware/validation.js
@@ -23,3 +23,21 @@ exports.saveEvent = (req, res, next) => {
     }
   });
 };
+
+exports.saveCalendar = (req, res, next) => {
+  const validationRule = {
+    events: 'required|string',
+    owner: 'required|string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
